# deep-research

./: .gitignore  README.md  ROADMAP.md  _find.py  _run.py  dr.py  pyproject.toml  pytest.ini
.githooks/: pre-commit
tests/: conftest.py  test_agentic.py  test_agentic_refusal_fix.py  test_ask.py  test_cli.py  test_cli_agent.py  test_cli_eval.py  test_db_isolation.py  test_depth.py  test_enforce_citations.py  test_hierarchy.py  test_medium_features.py  test_metadata.py  test_parallel.py  test_precommit.py  test_repl.py  test_search.py  test_search_cached.py  test_search_depth.py  test_show_snippets.py  test_source_report.py  test_streaming.py  test_system_prompt.py  test_tavily_cost.py  test_timeout.py  test_treval_span.py  test_verify.py
tests/eval/: gold.jsonl  test_eval.py  test_judge.py  test_judge_parsing.py  test_load_gold_set.py
